# Knowledge-Assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
infrastructure/docker/: Dockerfile.api
infrastructure/k8s/base/: api-deployment.yaml  configmap.yaml  kustomization.yaml  namespace.yaml  neo4j.yaml  qdrant.yaml  rabbitmq.yaml  redis.yaml  secrets.yaml  worker-deployment.yaml
infrastructure/k8s/overlays/dev/: kustomization.yaml  patch-replicas.yaml  patch-resources.yaml  patch-service-nodeport.yaml
infrastructure/k8s/overlays/prod/: kustomization.yaml  patch-replicas.yaml
monitoring/grafana/dashboards/: system_overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yaml
monitoring/prometheus/: prometheus.yml
src/: __init__.py  config.py
src/agents/: __init__.py  base.py  extractor.py  planner.py  qa.py  state.py  validator.py  workflow.py
src/api/: main.py
src/api/middleware/: __init__.py  auth.py  rate_limit.py
src/api/routes/: admin.py  auth.py  documents.py  health.py  query.py
src/mlops/: __init__.py  dvc_manager.py  evaluation.py  pipeline.py  tracking.py
src/monitoring/: __init__.py
src/observability/: __init__.py  metrics.py
src/pipeline/: __init__.py  chunking.py  document_parser.py  indexing.py  knowledge_graph.py
src/retrieval/: __init__.py  bm25_retriever.py  dense_retriever.py  hybrid_search.py  reranker.py  sparse_retriever.py
tests/: conftest.py
tests/unit/: test_agents.py  test_api.py  test_llm_client.py  test_mlops.py  test_observability.py  test_pipeline.py  test_retrieval.py  test_security.py
