[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enterprise-knowledge-assistant"
version = "0.1.0"
description = "Production-grade intelligent assistant for enterprise document analysis with Agentic RAG"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Enterprise AI Team"}
]
keywords = ["rag", "llm", "knowledge-assistant", "multi-agent", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    
    # LLM & AI
    "openai>=1.12.0",
    "litellm>=1.23.0",
    "tiktoken>=0.5.2",
    "tenacity>=8.2.3",
    
    # Embeddings & NLP
    "sentence-transformers>=2.3.0",
    "transformers>=4.37.0",
    "torch>=2.1.0",
    "numpy>=1.26.0",
    
    # Vector Database
    "qdrant-client>=1.7.0",
    
    # Graph Database
    "neo4j>=5.16.0",
    
    # Cache & Message Queue
    "redis>=5.0.0",
    "aio-pika>=9.3.0",
    
    # Agent Framework
    "langgraph>=0.0.26",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.0.13",
    "llama-index>=0.10.0",
    
    # Document Processing
    "pypdf>=4.0.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "unstructured>=0.12.0",
    
    # BM25 & Sparse Retrieval
    "rank-bm25>=0.2.2",
    
    # Monitoring & Observability
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "structlog>=24.1.0",
    
    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.26.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "testcontainers>=3.7.0",
    "httpx>=0.26.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.7",
]

mlops = [
    "mlflow>=2.10.0",
    "dvc>=3.38.0",
    "ragas>=0.1.0",
    "datasets>=2.16.0",
]

notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.1.0",
]

all = [
    "enterprise-knowledge-assistant[dev,mlops,notebooks]",
]

[project.scripts]
eka-api = "src.api.main:run_server"
eka-worker = "src.workers.main:run_worker"

[project.urls]
Homepage = "https://github.com/your-org/enterprise-knowledge-assistant"
Documentation = "https://github.com/your-org/enterprise-knowledge-assistant#readme"
Repository = "https://github.com/your-org/enterprise-knowledge-assistant"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG001", "S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
